@@ -221,15 +221,18 @@ Function\\|Special[ \t]+Form\\|Macro\\|\\(\\(Glob\\|Loc\\)al[ \t]+\\)?Variable\\
 ;; in help.el of Emacs-21.2.
 (defun mode-info-elisp-insert-button (string function data &optional help-echo)
   "Insert STRING and make a hyperlink between `help-mode' buffers."
-  (mode-info-static-if (fboundp 'help-xref-button)
-      (let ((pos (point)))
-	(insert string)
-	(goto-char pos)
-	(search-forward string)
-	(mode-info-static-if (>= emacs-major-version 21)
-	    (help-xref-button 0 function data help-echo)
-	  (help-xref-button 0 function data)))
-    (insert string)))
+  (mode-info-static-if (fboundp 'insert-text-button)
+      (unless (button-at (point))
+	(insert-text-button string 'type function 'help-args data))
+    (mode-info-static-if (fboundp 'help-xref-button)
+	(let ((pos (point)))
+	  (insert string)
+	  (goto-char pos)
+	  (search-forward string)
+	  (mode-info-static-if (>= emacs-major-version 21)
+	      (help-xref-button 0 function data help-echo)
+	    (help-xref-button 0 function data)))
+      (insert string))))
 
 (defun mode-info-elisp-add-function-button (function)
   (let ((buffer-read-only)
